[package]
name = "taproot"
version = "0.1.0"
authors = ["David Freifeld <freifeld.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ignore = "0.4.18"
log = "0.4.14"
orgize = "0.9.0"
rayon = "1.5.1"
rusqlite = "0.26.3"
seahash = "4.1.0"
serde_json = "1.0.74"
